<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="emptyItemViewModel"
            type="com.example.tmdbcleanarchitecture.ui.main.movie.MovieEmptyItemViewModel" />
    </data>


    <LinearLayout
        android:id="@+id/linearLayoutView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:background="@color/dBackground"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewEmpty"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@mipmap/app_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textColor="@color/dText"
            android:text="@string/empty_screen" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:textColor="@color/dText"
            android:text="@string/please_retry" />

        <Button
            android:id="@+id/btn_retry"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:onClick="@{() -> emptyItemViewModel.onRetryClick()}"
            android:text="@string/retry"
            android:textAllCaps="false"
            android:background="@color/dToolbar"
            android:textColor="@color/dText"
            android:textSize="20sp" />
    </LinearLayout>

</layout>